# Medula

./: README.md
Prj/: CMakeLists.txt
Prj/CMake/: STM32.cmake  STM32.cmake~  Toolchain-STM32-CodeSourcery.cmake
Prj/CMake/Modules/: FindSTM32F2xx.cmake  FindSTM32F2xx.cmake~  FindSTM32F4xx.cmake  FindSTM32F4xx.cmake~
Prj/Doc/: Doxyfile.in
Prj/Drv/: Drv.cmake
Prj/Drv/CMSIS/Device/ST/STM32F2xx/Source/Templates/: system_stm32f2xx.c  system_stm32f2xx.c~
Prj/Drv/CMSIS/Device/ST/STM32F2xx/Source/Templates/gcc/: startup_stm32f207xx.s
Prj/Drv/Dynamixel/: Dynamixel.c  Dynamixel.cmake  Dynamixel.h  Dynamixel_p.h  Dynamixel_test.c  Dynamixel_utils.c
Prj/Drv/STM32F2xx_HAL_Driver/Inc/: stm32f2xx_hal_def.h
Prj/Drv/STM32F2xx_HAL_Driver/Src/: stm32f2xx_hal_adc.c  stm32f2xx_hal_dma.c  stm32f2xx_hal_i2c.c~  stm32f2xx_hal_uart.c  stm32f2xx_hal_uart.c~
Prj/Inc/: Coroutine.h  Log.h  Medula.h  Medula_conf.h  Traces.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h
Prj/Lib/: Lib.cmake
Prj/Lib/IO_Data/: IO_Data.c  IO_Data.cmake  IO_Data.h  IO_Data_Dynamixel.c  IO_Data_Dynamixel.h
Prj/Src/: Appli.c  MPU6050.c~  MPU6050.h~  MPU6050_reg.h~  Traces.c  dynamixel.c~  main.c  main.c~  stm32f2xx_hal_msp.c  stm32f2xx_hal_msp.c~  stm32f2xx_it.c  stm32f2xx_it.c~  usbd_cdc_if.c~
